[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Peligros/SectorPeligro.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.4836, 45.9072 )

[node name="SectorPeligro" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )
numero_peligros = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CentroSector" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.49828, 1.41734 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
